--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -20,7 +20,7 @@
  
     <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file" />
-        <input type="submit" value="Nahrát">
+        <input type="submit" value="Nahrát" class="upldBtn">
       </form>
   </body>
 </html>
